Knight.ebnf
# Knight's ebnf grammar

# Begin
<Translation_Unit> ::= {<Function_Definition>} CODE_EOF

# Definition
<Function_Definition> ::= IDENTIFIER "(" ")" <Compound_Statement>

#Statement
<Statement> ::= <Compound_Statement> | <Expression_Statement> 
<Compound_Statement> ::= "{"{<Statement>}"}"

<Expression_Statement> ::= [<Expression>]";"

# Expression
<Expression> ::= <MulDiv_Expression>{("+" | "-")<MulDiv_Expression>}
<MulDiv_Expression> ::= <Unary_Expression>{("*" | "/" | "%")<Unary_Expression>}

<Unary_Expression> ::= ["-"]<Primary_Expression> 
<Primary_Expression> ::= "("<Expression>")" | CONSTANT_INT | CONSTANT_DEC | CONSTANT_STR | IDENTIFIER
